<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:layout_marginLeft="@dimen/margin_medium"
    android:layout_marginRight="@dimen/margin_medium"
    android:layout_marginBottom="@dimen/margin_medium"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/ll_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="@dimen/margin_small">
        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_normal"
            android:textColor="@color/black"
            android:layout_gravity="center_vertical"
            android:drawableStart="@drawable/ic_chevron_left_black_24dp"
            android:background="@color/light_shadow"
            android:text="@string/cancel"/>
        <TextView
            android:id="@+id/tv_add_item_header"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:maxEms="25"
            android:layout_gravity="center_vertical"
            android:maxLines="1"
            android:ellipsize="end"
            android:textSize="20sp"/>
        <TextView
            android:id="@+id/tv_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_normal"
            android:textColor="@color/black"
            android:layout_gravity="center_vertical"
            android:drawableEnd="@drawable/ic_navigate_next_black_24dp"
            android:background="@color/light_shadow"
            android:text="@string/save"/>
    </LinearLayout>
    <View
        android:id="@+id/view_separator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"
        android:layout_marginTop="@dimen/margin_small"
        app:layout_constraintTop_toBottomOf="@id/ll_header" />

    <TextView
        android:id="@+id/tv_quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="@dimen/margin_large"
        android:layout_marginLeft="@dimen/margin_small"
        app:layout_constraintTop_toBottomOf="@id/view_separator"
        android:text="@string/quantity"/>

    <EditText
        android:id="@+id/et_quantity"
        android:layout_width="@dimen/et_default_width"
        android:layout_height="@dimen/et_default_height"
        android:inputType="number"
        android:layout_marginLeft="@dimen/margin_small"
        android:layout_marginTop="@dimen/margin_small"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_quantity"
        android:background="@drawable/shape_rectangular_black_border"/>

    <TextView
        android:id="@+id/tv_discount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="@dimen/margin_medium"
        android:layout_marginLeft="@dimen/margin_small"
        app:layout_constraintTop_toBottomOf="@id/et_quantity"
        android:text="@string/discount"/>

    <com.nex3z.flowlayout.FlowLayout
        android:id="@+id/gl_discounts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_discount"
        app:flChildSpacing="auto"
        app:flChildSpacingForLastRow="align"
        app:flRowSpacing="8dp"
        android:layout_marginTop="@dimen/margin_small" />


</android.support.constraint.ConstraintLayout>