<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/shape_rectangular_black_border"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_marginEnd="@dimen/margin_small"
            android:orientation="vertical"
            android:layout_marginBottom="@dimen/margin_small"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/tv_charge">

        <include
                android:id="@+id/layout_fragment_header"
                layout="@layout/layout_fragment_header" />
        <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_cart_items"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

        </android.support.v7.widget.RecyclerView>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_small"
                android:layout_marginRight="@dimen/margin_small"
                android:layout_marginTop="@dimen/margin_small">
            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/subtotal"/>
            <TextView
                    android:id="@+id/tv_subtotal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="$ 10,300"/>
        </LinearLayout>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_small"
                android:layout_marginRight="@dimen/margin_small"
                android:layout_marginTop="@dimen/margin_small">
            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/discount"/>
            <TextView
                    android:id="@+id/tv_discount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="$ 10,300"/>
        </LinearLayout>

        <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:gravity="center"
                android:id="@+id/bt_clear_sale"
                android:layout_marginTop="@dimen/margin_small"
                android:padding="4dp"
                android:background="@drawable/shape_rectangular_black_border_red_solid"
                android:text="@string/clear_sale"/>

    </LinearLayout>

    <TextView
            android:id="@+id/tv_charge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="Charge $ 9,270"
            android:gravity="center_horizontal"
            android:padding="@dimen/padding_normal"
            android:layout_margin="@dimen/margin_small"
            android:background="@drawable/shape_rectangular_black_border"
            app:layout_constraintBottom_toBottomOf="parent"/>

</android.support.constraint.ConstraintLayout>